src/test/resources/refCompilerOutput/invalid/semanticErr/variables/basicTypeErr10.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:13 -- Incompatible type at 128 (expected: STRING, actual: INT)
